# sleeka-frontend

./: .gitignore  angular.json  nx.json  package-lock.json  package.json  project.json  tailwind.config.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/modules/home/comment/: comment.component.html  comment.component.ts
src/app/modules/home/new-post/: new-post.component.html  new-post.component.ts
src/app/modules/home/post/: post.component.html  post.component.ts
src/app/modules/home/posts-list/: posts-list.component.html  posts-list.component.ts
src/app/modules/home/sublkeeks-list/: sublkeeks-list.component.html  sublkeeks-list.component.spec.ts  sublkeeks-list.component.ts
src/app/modules/home/subsleeks-list/: subsleeks-list.component.html  subsleeks-list.component.spec.ts  subsleeks-list.component.ts
src/app/services/: comments.service.ts  posts.service.ts  sub-sleeks.service.spec.ts  sub-sleeks.service.ts  subsleeks.service.spec.ts  subsleeks.service.ts
src/app/shared/models/: comment.model.ts  post.model.ts  sub-sleek.model.spec.ts  sub-sleek.model.ts
src/sublkeeks-list/: sublkeeks-list.component.html  sublkeeks-list.component.spec.ts  sublkeeks-list.component.ts
