[package]
name = "sleeka-frontend"
version = "0.0.0"
description = "Sleeka Frontend"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.11", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.14", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper-tls = { version = "0.6" }
